feat: update Vertex AI notebook to remove unnecessary outputs and improve execution counts

--- a/vertex-ai/vertexai_custom_traning.ipynb
+++ b/vertex-ai/vertexai_custom_traning.ipynb
@@ -22,29 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "753d4156",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/diogo/miniconda3/envs/vertexai_env/lib/python3.9/site-packages/requests/__init__.py:86: RequestsDependencyWarning: Unable to find acceptable character detection dependency (chardet or charset_normalizer).\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Vertex AI initialized\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import vertexai_start\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os"
    ]
   },
   {
@@ -70,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "192b10b9",
    "metadata": {},
    "outputs": [],
@@ -255,8 +240,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "0118a233",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DataFrame shape (rows, cols): (150, 5)\n",
+      "Array shape (rows, cols): (150, 5)\n",
+      "Total columns: 5\n",
+      "Feature columns are 0 to 3, label column is 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "array = df.values\n",
+    "\n",
+    "# Inspect DataFrame and array to determine correct slicing\n",
+    "print(\"DataFrame shape (rows, cols):\", df.shape)\n",
+    "print(\"Array shape (rows, cols):\", array.shape)\n",
+    "num_cols = df.shape[1]\n",
+    "print(f\"Total columns: {num_cols}\")\n",
+    "print(f\"Feature columns are 0 to {num_cols-2}, label column is {num_cols-1}\")\n",
+    "\n",
+    "X = array[:, :4]\n",
+    "y = array[:, 4]\n",
+    "\n",
+    "\n",
+    "# Split the data into train and test sets (X inputs, y outputs)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.20, random_state=1\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "865c1618",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(120, 4)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape # 120 , because we allocated a test size of 20%, which means 150*0.20 = 30 (150-30=120)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "2c16e2eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(30, 4)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a260dea5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Iris-setosa', 'Iris-versicolor', 'Iris-versicolor', 'Iris-setosa',\n",
+       "       'Iris-virginica', 'Iris-versicolor', 'Iris-virginica',\n",
+       "       'Iris-setosa', 'Iris-setosa', 'Iris-virginica', 'Iris-versicolor',\n",
+       "       'Iris-setosa', 'Iris-virginica', 'Iris-versicolor',\n",
+       "       'Iris-versicolor', 'Iris-setosa', 'Iris-versicolor',\n",
+       "       'Iris-versicolor', 'Iris-setosa', 'Iris-setosa', 'Iris-versicolor',\n",
+       "       'Iris-versicolor', 'Iris-virginica', 'Iris-setosa',\n",
+       "       'Iris-virginica', 'Iris-versicolor', 'Iris-setosa', 'Iris-setosa',\n",
+       "       'Iris-versicolor', 'Iris-virginica'], dtype=object)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "# Choosed SVC because works well in a small-medium tabular dataset with only 4 features. \n",
+    "\n",
+    "svn = SVC()\n",
+    "svn.fit(X_train,y_train)\n",
+    "predictions = svn.predict(X_test)\n",
+    "predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "1cc878be",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9666666666666667"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "accuracy_score(y_test,predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a39d496",
    "metadata": {},
    "outputs": [],
    "source": []
