--- a/vertex-ai/vertexai_custom_traning.ipynb
+++ b/vertex-ai/vertexai_custom_traning.ipynb
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "1cc878be",
    "metadata": {},
    "outputs": [
@@ -377,8 +377,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "1a39d496",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dump model file\n",
+    "\n",
+    "import pickle\n",
+    "import logging\n",
+    "\n",
+    "with open(\"model.pkl\",'wb') as model_f:\n",
+    "     pickle.dump(svn,model_f) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "b860014c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Upload model to bucket (Commented for now)\n",
+    "# from google.cloud import storage\n",
+    "# bucket_name = \"vertexai-storage11\"\n",
+    "# model_name = \"model.pkl\"\n",
+    "# storage_client = storage.Client()\n",
+    "# storage_bucket = storage_client.bucket(bucket_name=bucket_name)\n",
+    "# storage_bucket.blob(model_name).upload_from_filename(model_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb65efb8",
    "metadata": {},
    "outputs": [],
    "source": []
