feat: add Iris dataset training notebook and requirements, update execution counts

--- a/vertex-ai/vertexai_custom_training.ipynb
+++ b/vertex-ai/vertexai_custom_training.ipynb
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "0118a233",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "1cc878be",
    "metadata": {},
    "outputs": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "1a39d496",
    "metadata": {},
    "outputs": [],
@@ -390,6 +390,39 @@
     "with open(\"model.pkl\",'wb') as model_f:\n",
     "     pickle.dump(svn,model_f) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "b860014c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Upload model to bucket (Commented for now)\n",
+    "# from google.cloud import storage\n",
+    "# bucket_name = \"vertexai-storage11\"\n",
+    "# model_name = \"model.pkl\"\n",
+    "# storage_client = storage.Client()\n",
+    "# storage_bucket = storage_client.bucket(bucket_name=bucket_name)\n",
+    "# storage_bucket.blob(model_name).upload_from_filename(model_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f75bab6a",
+   "metadata": {},
+   "source": [
+    "### Convert jupyter notebook to python script\n",
+    "\n",
+    "`jupyter nbconvert vertexai_custom_training.ipynb --to python`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06f1f32e",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
