feat: remove unused file, remove vertexai import and add new comments

--- a/vertex-ai/vertexai_custom_training.ipynb
+++ b/vertex-ai/vertexai_custom_training.ipynb
@@ -22,12 +22,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "753d4156",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import vertexai_start\n",
+    "# import vertexai_start\n",
     "import pandas as pd\n",
     "import os"
    ]
@@ -55,17 +55,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "192b10b9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/diogo/miniconda3/envs/vertexai_env/lib/python3.9/site-packages/requests/__init__.py:86: RequestsDependencyWarning: Unable to find acceptable character detection dependency (chardet or charset_normalizer).\n",
+      "  warnings.warn(\n",
+      "/home/diogo/miniconda3/envs/vertexai_env/lib/python3.9/site-packages/google/auth/_default.py:76: UserWarning: Your application has authenticated using end user credentials from Google Cloud SDK without a quota project. You might receive a \"quota exceeded\" or \"API not enabled\" error. See the following page for troubleshooting: https://cloud.google.com/docs/authentication/adc-troubleshooting/user-creds. \n",
+      "  warnings.warn(_CLOUD_SDK_CREDENTIALS_WARNING)\n"
+     ]
+    }
+   ],
    "source": [
     "df = pd.read_csv(\"gs://vertexai-storage11/IRIS.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "5d34e303",
    "metadata": {},
    "outputs": [
@@ -208,7 +219,7 @@
        "[150 rows x 5 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "9de00492",
    "metadata": {},
    "outputs": [
@@ -229,7 +240,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "0118a233",
    "metadata": {},
    "outputs": [
@@ -278,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "865c1618",
    "metadata": {},
    "outputs": [
@@ -288,7 +299,7 @@
        "(120, 4)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "2c16e2eb",
    "metadata": {},
    "outputs": [
@@ -309,7 +320,7 @@
        "(30, 4)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "a260dea5",
    "metadata": {},
    "outputs": [
@@ -338,7 +349,7 @@
        "       'Iris-versicolor', 'Iris-virginica'], dtype=object)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "1cc878be",
    "metadata": {},
    "outputs": [
@@ -365,7 +376,7 @@
        "0.9666666666666667"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "id": "1a39d496",
    "metadata": {},
    "outputs": [],
@@ -393,19 +404,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "b860014c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/diogo/miniconda3/envs/vertexai_env/lib/python3.9/site-packages/google/auth/_default.py:76: UserWarning: Your application has authenticated using end user credentials from Google Cloud SDK without a quota project. You might receive a \"quota exceeded\" or \"API not enabled\" error. See the following page for troubleshooting: https://cloud.google.com/docs/authentication/adc-troubleshooting/user-creds. \n",
+      "  warnings.warn(_CLOUD_SDK_CREDENTIALS_WARNING)\n",
+      "/home/diogo/miniconda3/envs/vertexai_env/lib/python3.9/site-packages/google/auth/_default.py:76: UserWarning: Your application has authenticated using end user credentials from Google Cloud SDK without a quota project. You might receive a \"quota exceeded\" or \"API not enabled\" error. See the following page for troubleshooting: https://cloud.google.com/docs/authentication/adc-troubleshooting/user-creds. \n",
+      "  warnings.warn(_CLOUD_SDK_CREDENTIALS_WARNING)\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
-    "# Upload model to bucket (Commented for now)\n",
-    "# from google.cloud import storage\n",
-    "# bucket_name = \"vertexai-storage11\"\n",
-    "# model_name = \"model.pkl\"\n",
-    "# storage_client = storage.Client()\n",
-    "# storage_bucket = storage_client.bucket(bucket_name=bucket_name)\n",
-    "# storage_bucket.blob(model_name).upload_from_filename(model_name)"
+    "#Upload model to bucket (Commented for now)\n",
+    "# This code is important to immport our model to the Model registry in VertexAI\n",
+    "\n",
+    "from google.cloud import storage\n",
+    "bucket_name = \"vertexai-storage11\"\n",
+    "model_name = \"model.pkl\"\n",
+    "storage_client = storage.Client()\n",
+    "storage_bucket = storage_client.bucket(bucket_name=bucket_name)\n",
+    "storage_bucket.blob(model_name).upload_from_filename(model_name)"
    ]
   },
   {
